---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2024-10-30
  Bugfixes:
    - Fixed that indicators would not glow at night. (#14)
    - Fixed that indicators would disappear when flipping a crafting machine with special flipped graphics. (#15)
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2024-10-15
  Changes:
    - Updated to Factorio 2.0.
---------------------------------------------------------------------------------------------------
Version: 1.2.8
Date: 2023-08-21
  Changes:
    - Improved the behavior of color settings with regards to alpha (#12)
---------------------------------------------------------------------------------------------------
Version: 1.2.7
Date: 2023-06-24
  Changes:
    - Removed indicator from Transport Drones fluid depots (#9)
---------------------------------------------------------------------------------------------------
Version: 1.2.6
Date: 2023-06-19
  Changes:
    - Updated base dependency to 1.1.85 to avoid nuking of all mod settings on upgrade
---------------------------------------------------------------------------------------------------
Version: 1.2.5
Date: 2023-06-05
  Changes:
    - Color settings are freely customizable instead of predefined (#5)
---------------------------------------------------------------------------------------------------
Version: 1.2.4
Date: 2022-08-11
  Features:
    - Added "huge" indicator size (~prokoprandacek)
  Bugfixes:
    - Fixed duplicate info icons on setting names in recent Factorio versions
---------------------------------------------------------------------------------------------------
Version: 1.2.3
Date: 2021-12-09
  Bugfixes: