@@ -1,7 +1,8 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: ????
-  Changes:
+  Bugfixes:
+    - Fixed a crash when a mining drill has no graphics set. (#16)
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.1
 Date: 2024-10-30
